# youtube-submd

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.worker  bestpartners_tool.py  bestpartners_tool.sh  bestpartners_tool_README.md  bilibili_tool.py  channels.yaml  com.yangkai.bestpartners.plist  docker-compose.yml  install_agent.sh  platform_adapters.py  pyproject.toml  railway.json  run_automation.sh  run_bestpartners.sh  run_youtumd.sh  scheduler.py  status_view.py  subscription_runner.py  subscription_status.py  subscriptions.py  subscriptions.yaml  uninstall_agent.sh  youtumd.py  youtumd.sh  youtumd_README.md
api/: app.py
api/auth/: dependencies.py  rate_limit.py
api/errors/: __init__.py  codes.py  responses.py
api/models/: __init__.py  status.py  summary.py  transcript.py
api/routes/: health.py  jobs.py  summaries.py  youtube.py
config/: __init__.py  runtime.py
libs/: __init__.py  config.py
libs/ai/: __init__.py  _utils.py  dashscope.py  minimax.py
libs/transcript/: __init__.py  _utils.py  cleanup.py  cookie.py  download.py  parsing.py
scripts/: generate-api-key.sh  start-api.sh  start-worker.sh
services/: __init__.py  summary.py  transcript.py
storage/: __init__.py  jobs.py  keys.py  models.py  session.py
tests/: test_bestpartners_tool.py  test_bilibili_tool.py  test_platform_adapters.py  test_subscriptions.py
tests/api/: test_foundation.py
tests/services/: test_services.py
workers/: __init__.py  celery_app.py  tasks.py  tasks_impl.py
